// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`store:middlewares:player play/pause cannot play if a code editor is opened 1`] = `
Array [
  Object {
    "meta": Object {
      "jestSerialized": true,
    },
    "payload": Object {
      "containerId": "global",
      "messages": Array [
        Object {
          "content": "Please close editors before play timebar",
        },
      ],
      "type": "warning",
    },
    "type": "WS_MESSAGE_ADD",
  },
]
`;

exports[`store:middlewares:player play/pause cannot play if a health status is critical 1`] = `
Array [
  Object {
    "meta": Object {
      "jestSerialized": true,
    },
    "payload": Object {
      "containerId": "global",
      "messages": Array [
        Object {
          "content": "One process of the application is overloaded, cannot switch to play",
        },
      ],
      "type": "warning",
    },
    "type": "WS_MESSAGE_ADD",
  },
]
`;

exports[`store:middlewares:player play/pause cannot play if an editor is opened 1`] = `
Array [
  Object {
    "meta": Object {
      "jestSerialized": true,
    },
    "payload": Object {
      "containerId": "global",
      "messages": Array [
        Object {
          "content": "Please close editors before play timebar",
        },
      ],
      "type": "warning",
    },
    "type": "WS_MESSAGE_ADD",
  },
]
`;

exports[`store:middlewares:player play/pause cannot play if no page has a focus 1`] = `
Array [
  Object {
    "type": "HSC_PLAY",
  },
]
`;

exports[`store:middlewares:player play/pause does not update cursors when no playingTimebarId 1`] = `
Array [
  Object {
    "type": "HSC_PLAY",
  },
  Object {
    "type": "HSC_PAUSE",
  },
]
`;

exports[`store:middlewares:player play/pause does not update cursors when playing timebar does not exist 1`] = `
Array [
  Object {
    "type": "HSC_PLAY",
  },
  Object {
    "type": "HSC_PAUSE",
  },
]
`;

exports[`store:middlewares:player play/pause play update cursors at regular intervals until pause 1`] = `
Array [
  Object {
    "type": "HSC_PLAY",
  },
  Object {
    "payload": Object {
      "slideWindow": Object {
        "lower": 1498642826647,
        "upper": 1498643156647,
      },
      "timebarUuid": "tb1",
      "visuWindow": Object {
        "current": NaN,
        "lower": 1498642826647,
        "upper": 1498643156647,
      },
    },
    "type": "WS_TIMEBAR_UPDATE_CURSORS",
  },
  Object {
    "payload": Object {
      "slideWindow": Object {
        "lower": 1498642826647,
        "upper": 1498643156647,
      },
      "timebarUuid": "tb1",
      "visuWindow": Object {
        "current": NaN,
        "lower": 1498642826647,
        "upper": 1498643156647,
      },
    },
    "type": "WS_TIMEBAR_UPDATE_CURSORS",
  },
  Object {
    "payload": Object {
      "slideWindow": Object {
        "lower": 1498642826647,
        "upper": 1498643156647,
      },
      "timebarUuid": "tb1",
      "visuWindow": Object {
        "current": NaN,
        "lower": 1498642826647,
        "upper": 1498643156647,
      },
    },
    "type": "WS_TIMEBAR_UPDATE_CURSORS",
  },
  Object {
    "type": "HSC_PAUSE",
  },
]
`;

exports[`store:middlewares:player play/pause simple play and pause 1`] = `
Array [
  Object {
    "type": "HSC_PLAY",
  },
  Object {
    "type": "HSC_PAUSE",
  },
]
`;

exports[`store:middlewares:player when click on NOW button request session time and update cursors corresponding to this time 1`] = `
Array [
  Object {
    "payload": Object {
      "slideWindow": Object {
        "lower": -295663,
        "upper": 34337,
      },
      "timebarUuid": "tb1",
      "visuWindow": Object {
        "current": 1337,
        "lower": -295663,
        "upper": 34337,
      },
    },
    "type": "WS_TIMEBAR_UPDATE_CURSORS",
  },
  Object {
    "payload": Object {
      "timebarUuid": "tb1",
    },
    "type": "WS_TIMEBAR_GO_NOW",
  },
]
`;

exports[`store:middlewares:player when enable real time mode request session time and switch to real time 1`] = `
Array [
  Object {
    "payload": Object {
      "speed": 1,
      "timebarUuid": "tb1",
    },
    "type": "WS_TIMEBAR_SPEED_UPDATE",
  },
  Object {
    "payload": Object {
      "slideWindow": Object {
        "lower": -295663,
        "upper": 34337,
      },
      "timebarUuid": "tb1",
      "visuWindow": Object {
        "current": 1337,
        "lower": -295663,
        "upper": 34337,
      },
    },
    "type": "WS_TIMEBAR_UPDATE_CURSORS",
  },
  Object {
    "payload": Object {
      "timebarUuid": "tb1",
    },
    "type": "HSC_PLAY",
  },
  Object {
    "payload": Object {
      "flag": true,
      "timebarUuid": "tb1",
    },
    "type": "WS_TIMEBAR_SET_REALTIME",
  },
]
`;

exports[`store:middlewares:player when focus a page dispatch a HSC_PAUSE action if new page has another timebar 1`] = `
Array [
  Object {
    "payload": Object {},
    "type": "HSC_PAUSE",
  },
  Object {
    "payload": Object {
      "pageId": "p2",
    },
    "type": "WS_WINDOW_PAGE_FOCUS",
  },
]
`;

exports[`store:middlewares:player when focus a page do nothing if new page has same timebar 1`] = `
Array [
  Object {
    "payload": Object {
      "pageId": "p1",
    },
    "type": "WS_WINDOW_PAGE_FOCUS",
  },
]
`;

exports[`store:middlewares:player when open an editor dispatch a HSC_PAUSE action when open an editor 1`] = `
Array [
  Object {
    "payload": Object {},
    "type": "HSC_PAUSE",
  },
  Object {
    "type": "WS_PAGE_PANELS_LOAD_IN_EDITOR",
  },
]
`;
